# NNCV

./: .gitignore  Dockerfile  README-Docker.md  container_libraries.py  pyproject.toml
Final assignment/: .gitignore  Dockerfile  Dockerfile_baseline  Dockerfile_unet  README-Slurm.md  README-Submission.md  README.md  dino_model  dino_model.py  download_docker_and_data.sh  head.py  inspect_results.py  jobscript_slurm.sh  main.sh  model.py  model_baseline.py  ood_model.py  predict.py  predict_baseline.py  predict_ood.py  predict_unet.py  test_local.sh  test_local_baseline.sh  test_local_ood.sh  test_local_peak.sh  test_local_unet.sh  train.py  train_ood.py  unet.py
Weekly notebooks/: 04_transformers.ipynb  vision_transformer_utils_to_update.py
