[project]
name = "nncv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.workspace]
members = [
    "Final assignment",
]
