[project]
name = "nncv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "normflows>=1.7.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "termcolor>=3.3.0",
    "torch>=2.10.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "Final assignment",
]
